# gl-physics-engine

./: .gitmodules  CMakeLists.txt  README.md
assets/shaders/: 2d_basic_shader.fs  2d_basic_shader.vs  debug.frag  debug.vert
dependencies/glad/: glad.h
src/: glad.c  main.cpp
src/components/2D/: rigidbody2d.h  transform2d.h
src/core/: application.cpp  application.h  input.cpp  input.h  time.cpp  time.h
src/physics/2D/: boundary_solver2d.cpp  boundary_solver2d.h  collision_solver2d.cpp  collision_solver2d.h  integrator2d.cpp  integrator2d.h  spatial_grid.cpp  spatial_grid.h
src/rendering/2D/: debug_draw.cpp  debug_draw.h
src/rendering/utils/: shader.h
src/scene/: component.h  game_object.h  scene.cpp  scene.h
src/ui/: imgui_layer.cpp  imgui_layer.h
src/ui/panels/: profiler_panel.cpp  profiler_panel.h
